--- a/user.html
+++ b/user.html
@@ -45,7 +45,7 @@ body {
   position: relative;
 }
 
-/* ABSOLUTELY STATIC Fixed Background Image - NO SCROLL */
+/* ABSOLUTELY STATIC Fixed Background Image - NO SCROLL - ALWAYS DARK */
 .background-wrapper {
   position: fixed;
   top: 0;
@@ -65,13 +65,14 @@ body {
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
-  opacity: 0.3;
+  opacity: 0.12;
   pointer-events: none;
   transition: opacity 0.5s ease;
 }
 
+/* Keep background dark even in light theme */
 body.light-theme .background-image {
-  opacity: 0.15;
+  opacity: 0.12;
 }
 
 .header-wrapper {
@@ -309,7 +310,7 @@ body.light-theme .search-icon {
   padding-top: calc(65px + env(safe-area-inset-top));
 }
 
-/* Beautiful Welcome Banner - EVEN MORE VISIBLE */
+/* Beautiful Welcome Banner - ALWAYS WHITE TEXT */
 .welcome-banner {
   display: block;
   padding: 180px 24px 120px;
@@ -322,22 +323,32 @@ body.light-theme .search-icon {
   font-family: 'Georgia', 'Times New Roman', serif;
   font-size: 64px;
   font-weight: 300;
-  color: var(--text-primary);
+  color: #ffffff;
   margin: 0 0 16px 0;
   line-height: 1.2;
   letter-spacing: -1px;
   text-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
 }
 
+/* Keep welcome banner text white even in light theme */
+body.light-theme .welcome-banner-text {
+  color: #ffffff;
+}
+
 .welcome-subtitle {
   font-family: 'Georgia', 'Times New Roman', serif;
   font-size: 20px;
   font-weight: 300;
-  color: var(--text-secondary);
+  color: #cccccc;
   margin: 0;
   letter-spacing: 0.5px;
   font-style: italic;
   text-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
+}
+
+/* Keep welcome subtitle light gray even in light theme */
+body.light-theme .welcome-subtitle {
+  color: #cccccc;
 }
 
 /* Content container - FULL WIDTH */
