--- a/user.html
+++ b/user.html
@@ -46,7 +46,7 @@ body {
   position: relative;
 }
 
-/* ABSOLUTELY STATIC Fixed Background Image - ALWAYS DARKENED */
+/* ABSOLUTELY STATIC Fixed Background Image - NO SCROLL */
 .background-wrapper {
 position: fixed;
 top: 0;
@@ -67,15 +67,19 @@ background-size: cover;
 background-position: center center;
 background-repeat: no-repeat;
 opacity: 0.3;
-filter: brightness(0.6);
 pointer-events: none;
 transition: opacity 0.5s ease;
 }
 
-/* Background stays darkened in light theme too */
-body.light-theme .background-image {
-opacity: 0.3;
-filter: brightness(0.6);
+/* Background always darkened - dark overlay */
+.background-overlay {
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background: rgba(0, 0, 0, 0.5);
+pointer-events: none;
 }
 
 .header-wrapper {
@@ -86,7 +90,7 @@ right: 0;
 background: rgba(15, 15, 15, 0.95);
 backdrop-filter: blur(10px);
 padding-top: env(safe-area-inset-top);
-border-bottom: 1px solid var(–border-color);
+border-bottom: 1px solid var(--border-color);
 z-index: 40;
 width: 100%;
 }
@@ -123,7 +127,7 @@ height: 40px;
 border-radius: 50%;
 background: transparent;
 border: none;
-color: var(–text-primary);
+color: var(--text-primary);
 cursor: pointer;
 display: flex;
 align-items: center;
@@ -132,7 +136,7 @@ font-size: 18px;
 transition: background 0.2s ease;
 }
 .icon-btn:hover {
-background: var(–hover-bg);
+background: var(--hover-bg);
 }
 .auth-buttons {
 display: none;
@@ -153,14 +157,14 @@ border: none;
 }
 .btn-login {
 background: transparent;
-color: var(–text-primary);
-border: 1px solid var(–border-color);
+color: var(--text-primary);
+border: 1px solid var(--border-color);
 }
 .btn-login:hover {
-background: var(–hover-bg);
+background: var(--hover-bg);
 }
 .btn-signup {
-background: var(–accent);
+background: var(--accent);
 color: white;
 }
 .btn-signup:hover {
@@ -172,7 +176,7 @@ display: none;
 align-items: center;
 gap: 12px;
 font-size: 14px;
-color: var(–text-primary);
+color: var(--text-primary);
 }
 .user-welcome.show {
 display: flex;
@@ -189,7 +193,7 @@ top: 50px;
 right: 0;
 background: rgba(15, 15, 15, 0.98);
 backdrop-filter: blur(10px);
-border: 1px solid var(–border-color);
+border: 1px solid var(--border-color);
 border-radius: 8px;
 padding: 8px 0;
 min-width: 180px;
@@ -212,11 +216,11 @@ transition: background 0.2s ease;
 display: flex;
 align-items: center;
 gap: 10px;
-color: var(–text-primary);
+color: var(--text-primary);
 font-size: 14px;
 }
 .user-menu-item:hover {
-background: var(–hover-bg);
+background: var(--hover-bg);
 }
 .user-menu-item i {
 width: 16px;
@@ -256,7 +260,7 @@ background: rgba(15, 15, 15, 0.85);
 backdrop-filter: blur(20px);
 color: #fff;
 font-size: 15px;
-font-family: “Roboto”, Arial, sans-serif;
+font-family: "Roboto", Arial, sans-serif;
 outline: none;
 transition: all 0.3s ease;
 }
@@ -277,7 +281,7 @@ color: rgba(0, 0, 0, 0.4);
 }
 
 .search-input:focus {
-border-color: var(–accent);
+border-color: var(--accent);
 background: rgba(15, 15, 15, 0.95);
 box-shadow: 0 4px 24px rgba(62, 166, 255, 0.2);
 }
@@ -303,7 +307,7 @@ color: rgba(0, 0, 0, 0.4);
 }
 
 .search-input:focus + .search-icon {
-color: var(–accent);
+color: var(--accent);
 }
 
 /* Page wrapper to control layout */
@@ -313,21 +317,21 @@ width: 100%;
 padding-top: calc(65px + env(safe-area-inset-top));
 }
 
-/* Beautiful Welcome Banner - PUSHED DOWN EVEN MORE */
+/* Beautiful Welcome Banner - MORE BACKGROUND VISIBLE */
 .welcome-banner {
 display: block;
-padding: 280px 24px 180px;
+padding: 220px 24px 200px;
 text-align: center;
 width: 100%;
 position: relative;
 }
 
-/* Text ALWAYS WHITE regardless of theme */
+/* Welcome text always white - regardless of theme */
 .welcome-banner-text {
-font-family: ‘Georgia’, ‘Times New Roman’, serif;
+font-family: 'Georgia', 'Times New Roman', serif;
 font-size: 64px;
 font-weight: 300;
-color: #ffffff !important;
+color: #ffffff;
 margin: 0 0 16px 0;
 line-height: 1.2;
 letter-spacing: -1px;
@@ -335,10 +339,10 @@ text-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
 }
 
 .welcome-subtitle {
-font-family: ‘Georgia’, ‘Times New Roman’, serif;
+font-family: 'Georgia', 'Times New Roman', serif;
 font-size: 20px;
 font-weight: 300;
-color: rgba(255, 255, 255, 0.85) !important;
+color: rgba(255, 255, 255, 0.8);
 margin: 0;
 letter-spacing: 0.5px;
 font-style: italic;
@@ -348,7 +352,7 @@ text-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
 /* Content container - FULL WIDTH */
 .content-container {
 width: 100%;
-background: var(–bg-color);
+background: var(--bg-color);
 position: relative;
 z-index: 1;
 }
@@ -369,31 +373,31 @@ padding: 0;
 
 .article-item {
 padding: 24px 0;
-border-bottom: 1px solid var(–border-color);
+border-bottom: 1px solid var(--border-color);
 cursor: pointer;
 transition: background 0.2s ease;
 }
 
 .article-item:hover {
-background: var(–hover-bg);
+background: var(--hover-bg);
 margin: 0 -12px;
 padding: 24px 12px;
 }
 .article-title {
-font-family: ‘Times New Roman’, Times, serif;
+font-family: 'Times New Roman', Times, serif;
 font-size: 42px;
 font-weight: bold;
 margin: 0 0 8px 0;
 line-height: 1.2;
-color: var(–text-primary);
+color: var(--text-primary);
 word-wrap: break-word;
 }
 .article-item:hover .article-title {
-color: var(–accent);
+color: var(--accent);
 }
 .article-meta {
 font-size: 14px;
-color: var(–text-secondary);
+color: var(--text-secondary);
 display: flex;
 align-items: center;
 gap: 8px;
@@ -402,16 +406,16 @@ flex-wrap: wrap;
 .meta-dot {
 width: 3px;
 height: 3px;
-background: var(–text-secondary);
+background: var(--text-secondary);
 border-radius: 50%;
 }
 
 .footer {
-background: var(–bg-color);
-border-top: 1px solid var(–border-color);
+background: var(--bg-color);
+border-top: 1px solid var(--border-color);
 padding: 24px;
 text-align: center;
-color: var(–text-secondary);
+color: var(--text-secondary);
 font-size: 14px;
 line-height: 1.6;
 position: relative;
@@ -423,7 +427,7 @@ width: 100%;
 margin-bottom: 8px;
 }
 .article-count {
-color: var(–accent-green);
+color: var(--accent-green);
 font-weight: 600;
 }
 .footer-tagline {
@@ -431,7 +435,7 @@ margin-bottom: 8px;
 }
 .footer-location {
 font-size: 13px;
-color: var(–text-secondary);
+color: var(--text-secondary);
 opacity: 0.8;
 }
 @media (max-width: 768px) {
@@ -449,7 +453,7 @@ font-size: 14px;
 padding: 16px 16px 80px;
 }
 .welcome-banner {
-padding: 200px 16px 120px;
+padding: 160px 16px 140px;
 }
 .welcome-banner-text {
 font-size: 42px;
@@ -484,6 +488,7 @@ font-size: 13px;
 
 <div class="background-wrapper">
   <div class="background-image" id="backgroundImage"></div>
+  <div class="background-overlay"></div>
 </div>
 
 <div class="header-wrapper">
