--- a/index.html
+++ b/index.html
@@ -797,7 +797,7 @@ onAuthStateChanged(auth, async (user) => {
         // Extract first name from full name
         const firstName = data.full_name.split(' ')[0];
         welcomeBannerText.textContent = `Welcome, ${firstName}`;
-        welcomeSubtitle.textContent = 'Explore the frontier of medical knowledge';
+        welcomeSubtitle.textContent = 'arnabna fe manwar anwar';
       } else {
         // Fallback to email username or display name
         const firstName = user.displayName ? user.displayName.split(' ')[0] : user.email.split('@')[0];
