--- a/test2.html
+++ b/test2.html
@@ -225,111 +225,56 @@ background: var(--hover-bg);
 width: 16px;
 }
 
-/* Floating Search Bar - Below Header */
+/* Fixed Search Bar Above Articles */
 .search-container {
-position: fixed;
-top: calc(65px + env(safe-area-inset-top) + 100px);
-left: 50%;
-transform: translateX(-50%);
-z-index: 35;
-width: 90%;
-max-width: 600px;
-transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
-will-change: transform, opacity;
-}
-
-.search-container.hidden {
-transform: translateX(-50%) translateY(-80px);
-opacity: 0;
-pointer-events: none;
-}
-
-.search-container.compact {
-width: 60px;
-max-width: 60px;
-left: auto;
-right: 24px;
-transform: translateX(0);
+position: relative;
+width: 100%;
+max-width: 900px;
+margin: 0 auto;
+padding: 0 24px 24px;
+z-index: 1;
 }
 
 .search-wrapper {
 position: relative;
 width: 100%;
-box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
-border-radius: 28px;
-transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+border-radius: 12px;
 overflow: hidden;
-background: rgba(15, 15, 15, 0.85);
-backdrop-filter: blur(20px);
-}
-
-.search-container.compact .search-wrapper {
-border-radius: 50%;
-box-shadow: 0 4px 15px rgba(0, 0, 0, 0.4);
-width: 60px;
-height: 60px;
-display: flex;
-align-items: center;
-justify-content: center;
+background: var(--bg-color);
+border: 1px solid var(--border-color);
 }
 
 .search-input {
 width: 100%;
 padding: 14px 50px 14px 20px;
-border-radius: 28px;
-border: 1px solid rgba(255, 255, 255, 0.15);
-background: rgba(15, 15, 15, 0.85);
-backdrop-filter: blur(20px);
-color: #fff;
+border-radius: 12px;
+border: 1px solid var(--border-color);
+background: var(--bg-color);
+color: var(--text-primary);
 font-size: 15px;
 font-family: "Roboto", Arial, sans-serif;
 outline: none;
-transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
-opacity: 1;
-}
-
-.search-container.compact .search-input {
-padding: 14px;
-border-radius: 50%;
-opacity: 0;
-width: 60px;
-height: 60px;
-pointer-events: none;
+transition: all 0.2s ease;
 }
 
 body.light-theme .search-input {
-background: rgba(255, 255, 255, 0.92);
-border: 1px solid rgba(0, 0, 0, 0.08);
-color: #0f0f0f;
-box-shadow: 0 2px 12px rgba(0, 0, 0, 0.08);
-}
-
-body.light-theme .search-wrapper {
-background: rgba(255, 255, 255, 0.92);
-}
-
-body.light-theme .search-container.compact .search-wrapper {
-background: rgba(255, 255, 255, 0.92);
-border: 1px solid rgba(0, 0, 0, 0.08);
+background: var(--bg-color);
+border: 1px solid var(--border-color);
+color: var(--text-primary);
 }
 
 .search-input::placeholder {
-color: rgba(255, 255, 255, 0.5);
-}
-
-body.light-theme .search-input::placeholder {
-color: rgba(0, 0, 0, 0.4);
+color: var(--text-secondary);
 }
 
 .search-input:focus {
 border-color: var(--accent);
-background: rgba(15, 15, 15, 0.95);
-box-shadow: 0 4px 24px rgba(62, 166, 255, 0.2);
+box-shadow: 0 0 0 3px rgba(62, 166, 255, 0.1);
 }
 
 body.light-theme .search-input:focus {
-background: rgba(255, 255, 255, 0.98);
-box-shadow: 0 4px 24px rgba(6, 95, 212, 0.15);
+box-shadow: 0 0 0 3px rgba(6, 95, 212, 0.1);
 }
 
 .search-icon {
@@ -337,25 +282,10 @@ position: absolute;
 right: 20px;
 top: 50%;
 transform: translateY(-50%);
-color: rgba(255, 255, 255, 0.5);
+color: var(--text-secondary);
 font-size: 18px;
 pointer-events: none;
-transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.search-container.compact .search-icon {
-right: 50%;
-transform: translate(50%, -50%);
-font-size: 20px;
-color: rgba(255, 255, 255, 0.8);
-}
-
-body.light-theme .search-icon {
-color: rgba(0, 0, 0, 0.4);
-}
-
-body.light-theme .search-container.compact .search-icon {
-color: rgba(0, 0, 0, 0.6);
+transition: color 0.2s ease;
 }
 
 .search-input:focus + .search-icon {
@@ -369,17 +299,33 @@ top: calc(65px + env(safe-area-inset-top));
 left: 0;
 right: 0;
 z-index: 30;
+background: transparent;
+padding: 12px 16px;
+overflow: visible;
+}
+
+.stories-panel {
 background: var(--bg-color);
-border-bottom: 1px solid var(--border-color);
-padding: 16px 0;
+border-radius: 20px;
+padding: 14px 0;
+margin: 0 16px;
+max-width: calc(100% - 32px);
+box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15), 0 1px 3px rgba(0, 0, 0, 0.1);
+border: 1px solid var(--border-color);
 overflow-x: auto;
 overflow-y: hidden;
 -webkit-overflow-scrolling: touch;
 scrollbar-width: none;
+position: relative;
+backdrop-filter: blur(10px);
 }
 
-.stories-container::-webkit-scrollbar {
+.stories-panel::-webkit-scrollbar {
 display: none;
+}
+
+body.light-theme .stories-panel {
+box-shadow: 0 2px 12px rgba(0, 0, 0, 0.08);
 }
 
 .stories-wrapper {
@@ -469,13 +415,13 @@ background: var(--border-color);
 .page-wrapper {
 position: relative;
 width: 100%;
-padding-top: calc(65px + env(safe-area-inset-top) + 100px);
+padding-top: calc(65px + env(safe-area-inset-top) + 120px);
 }
 
 /* Beautiful Welcome Banner - MORE BACKGROUND VISIBLE */
 .welcome-banner {
 display: block;
-padding: 180px 24px 160px;
+padding: 120px 24px 80px;
 text-align: center;
 width: 100%;
 position: relative;
@@ -518,6 +464,12 @@ transition: opacity 1.2s cubic-bezier(0.4, 0, 0.2, 1), transform 1.2s cubic-bezi
 pointer-events: none;
 white-space: nowrap;
 will-change: opacity, transform;
+font-family: 'Georgia', 'Times New Roman', serif;
+font-size: 64px;
+font-weight: 300;
+color: #ffffff;
+letter-spacing: -1px;
+text-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
 }
 
 .welcome-text-item.active {
@@ -554,7 +506,7 @@ z-index: 1;
 max-width: 900px;
 width: 100%;
 margin: 0 auto;
-padding: 24px 24px 80px;
+padding: 0 24px 80px;
 contain: layout style paint;
 }
 
@@ -672,7 +624,14 @@ box-shadow: 0 6px 20px rgba(62, 166, 255, 0.5);
 
 @media (max-width: 768px) {
 .stories-container {
+padding: 10px 12px;
+}
+
+.stories-panel {
+border-radius: 16px;
 padding: 12px 0;
+margin: 0 12px;
+max-width: calc(100% - 24px);
 }
 
 .stories-wrapper {
@@ -695,12 +654,12 @@ max-width: 60px;
 }
 
 .page-wrapper {
-padding-top: calc(65px + env(safe-area-inset-top) + 90px);
+padding-top: calc(65px + env(safe-area-inset-top) + 130px);
 }
 
 .search-container {
 width: calc(100% - 32px);
-top: calc(65px + env(safe-area-inset-top) + 90px);
+top: calc(65px + env(safe-area-inset-top) + 130px);
 }
 
 .search-container.compact {
@@ -730,7 +689,7 @@ font-size: 14px;
 padding: 16px 16px 80px;
 }
 .welcome-banner {
-padding: 140px 16px 120px;
+padding: 100px 16px 60px;
 }
 .welcome-banner-text {
 font-size: 42px;
@@ -823,22 +782,10 @@ right: 20px;
 
 <!-- Stories Preview Section -->
 <div class="stories-container" id="storiesContainer">
-  <div class="stories-wrapper" id="storiesWrapper">
-    <!-- Stories will be dynamically generated -->
-  </div>
-</div>
-
-<!-- Floating Search Bar Below Header -->
-
-<div class="search-container" id="searchContainer">
-  <div class="search-wrapper">
-    <input 
-      type="text" 
-      class="search-input" 
-      id="searchInput" 
-      placeholder="Search articles..."
-    >
-    <i class="fas fa-search search-icon"></i>
+  <div class="stories-panel">
+    <div class="stories-wrapper" id="storiesWrapper">
+      <!-- Stories will be dynamically generated -->
+    </div>
   </div>
 </div>
 
@@ -855,6 +802,19 @@ right: 20px;
 
   <div class="content-container">
     <div class="list-container">
+      <!-- Fixed Search Bar Above Articles -->
+      <div class="search-container" id="searchContainer">
+        <div class="search-wrapper">
+          <input 
+            type="text" 
+            class="search-input" 
+            id="searchInput" 
+            placeholder="Search articles..."
+          >
+          <i class="fas fa-search search-icon"></i>
+        </div>
+      </div>
+      
       <ul class="article-list" id="articleList">
         <li class="article-item" onclick="openArticle('patholytica.com/library')">
           <h2 class="article-title">Understanding Cardiovascular Pathology: A Comprehensive Review</h2>
@@ -1255,36 +1215,16 @@ if (document.readyState === 'loading') {
   generateStories();
 }
 
-// Multi-language Welcome Text Animation (Apple Style)
+// Multi-language Welcome Text Animation (Apple Style) - Only 8 languages
 const welcomeTranslations = [
   { text: 'Welcome to Patholytica', lang: 'English' },
-  { text: 'Bienvenue sur Patholytica', lang: 'French' },
-  { text: 'Willkommen bei Patholytica', lang: 'German' },
-  { text: 'Bienvenido a Patholytica', lang: 'Spanish' },
-  { text: 'Benvenuto su Patholytica', lang: 'Italian' },
-  { text: 'Bem-vindo ao Patholytica', lang: 'Portuguese' },
-  { text: 'Welkom bij Patholytica', lang: 'Dutch' },
-  { text: 'Välkommen till Patholytica', lang: 'Swedish' },
-  { text: 'Velkommen til Patholytica', lang: 'Norwegian' },
-  { text: 'Velkommen til Patholytica', lang: 'Danish' },
-  { text: 'Tervetuloa Patholyticaan', lang: 'Finnish' },
   { text: 'أهلاً بك في Patholytica', lang: 'Arabic' },
+  { text: 'Bienvenido a Patholytica', lang: 'Spanish' },
+  { text: 'Bienvenue sur Patholytica', lang: 'French' },
+  { text: 'Patholytica میں خوش آمدید', lang: 'Urdu' },
   { text: 'Patholyticaへようこそ', lang: 'Japanese' },
   { text: 'Patholytica에 오신 것을 환영합니다', lang: 'Korean' },
-  { text: '欢迎来到 Patholytica', lang: 'Chinese (Simplified)' },
-  { text: '歡迎來到 Patholytica', lang: 'Chinese (Traditional)' },
-  { text: 'Добро пожаловать в Patholytica', lang: 'Russian' },
-  { text: 'Hoş geldiniz Patholytica', lang: 'Turkish' },
-  { text: 'ברוכים הבאים ל-Patholytica', lang: 'Hebrew' },
-  { text: 'स्वागत है Patholytica में', lang: 'Hindi' },
-  { text: 'Selamat datang di Patholytica', lang: 'Indonesian' },
-  { text: 'ยินดีต้อนรับสู่ Patholytica', lang: 'Thai' },
-  { text: 'Chào mừng đến với Patholytica', lang: 'Vietnamese' },
-  { text: 'Witamy w Patholytica', lang: 'Polish' },
-  { text: 'Vítejte v Patholytica', lang: 'Czech' },
-  { text: 'Üdvözöljük a Patholyticában', lang: 'Hungarian' },
-  { text: 'Bun venit la Patholytica', lang: 'Romanian' },
-  { text: 'Καλώς ήρθατε στο Patholytica', lang: 'Greek' },
+  { text: '欢迎来到 Patholytica', lang: 'Mandarin' },
 ];
 
 let currentTranslationIndex = 0;
@@ -1407,37 +1347,13 @@ function debounce(func, wait) {
   };
 }
 
-// Scroll behavior for search bar and back to top button
+// Scroll behavior for back to top button
 let lastScrollTop = 0;
-const searchContainer = document.getElementById('searchContainer');
 const backToTop = document.getElementById('backToTop');
-const scrollThreshold = 50;
-let isCompact = false;
 let ticking = false;
 
 function handleScroll() {
   const currentScroll = window.pageYOffset || document.documentElement.scrollTop;
-  
-  // Only show search bar when at the very top
-  if (currentScroll <= scrollThreshold) {
-    searchContainer.classList.remove('hidden');
-    searchContainer.classList.remove('compact');
-    isCompact = false;
-  } 
-  // Scrolling down - transform to compact circle and move right
-  else if (currentScroll > lastScrollTop && currentScroll > scrollThreshold) {
-    if (!isCompact) {
-      searchContainer.classList.add('compact');
-      isCompact = true;
-      // After animation completes, hide it
-      setTimeout(() => {
-        if (isCompact && currentScroll > scrollThreshold) {
-          searchContainer.classList.add('hidden');
-        }
-      }, 400);
-    }
-  }
-  // Scrolling up but not at top - keep hidden (do nothing)
   
   // Show/hide back to top button
   if (currentScroll > 300) {
